# SpellChecker-Plugin

./: .clang-tidy  .gitignore  .uncrustify.cfg  CMakeLists.txt  ISpellChecker.cpp  ISpellChecker.h  NavigationWidget.cpp  NavigationWidget.h  ProjectMistakesModel.cpp  ProjectMistakesModel.h  README.md  SpellChecker.json.in  SpellChecker.pluginspec.in  Word.h  azure-pipelines-1.yml  azure-pipelines.yml  conanfile.txt  idocumentparser.cpp  idocumentparser.h  outputpane.cpp  outputpane.h  spellchecker.pro  spellchecker_dependencies.pri  spellchecker_global.h  spellchecker_local_paths.pri.example  spellcheckerconstants.h  spellcheckercore.cpp  spellcheckercore.h  spellcheckercoreoptionspage.cpp  spellcheckercoreoptionspage.h  spellcheckercoreoptionswidget.cpp  spellcheckercoreoptionswidget.h  spellcheckercoreoptionswidget.ui  spellcheckercoresettings.cpp  spellcheckercoresettings.h  spellcheckerplugin.cpp  spellcheckerplugin.h  spellcheckerplugin.qrc  spellcheckquickfix.cpp  spellcheckquickfix.h  (+7 more)
.conan/: conan.conf
.conan/profiles/: cpp20  cpp20-ninja
.github/workflows/: build.yaml
Parsers/: Parsers.pri
Parsers/CppParser/: CppParser.pri  cplusplusdocumentparser.cpp  cplusplusdocumentparser.h  cppdocumentparser.cpp  cppdocumentparser.h  cppdocumentprocessor.cpp  cppdocumentprocessor.h  cppparserconstants.h  cppparseroptionspage.cpp  cppparseroptionspage.h  cppparseroptionswidget.cpp  cppparseroptionswidget.h  cppparseroptionswidget.ui  cppparsersettings.cpp  cppparsersettings.h
Resources/: spellcheckerplugin.qrc
SpellCheckers/: SpellCheckers.pri
SpellCheckers/HunspellChecker/: HunspellChecker.pri  HunspellConstants.h  hunspellchecker.cpp  hunspellchecker.h  hunspelloptionswidget.cpp  hunspelloptionswidget.h  hunspelloptionswidget.ui
cmake/: Findhunspell.cmake
src/: IOptionsWidget.h  ISpellChecker.cpp  ISpellChecker.h  NavigationWidget.cpp  NavigationWidget.h  ProjectMistakesModel.cpp  ProjectMistakesModel.h  Word.h  idocumentparser.cpp  idocumentparser.h  outputpane.cpp  outputpane.h  spellchecker_global.h  spellcheckerconstants.h  spellcheckercore.cpp  spellcheckercore.h  spellcheckercoreoptionspage.cpp  spellcheckercoreoptionspage.h  spellcheckercoreoptionswidget.cpp  spellcheckercoreoptionswidget.h  spellcheckercoreoptionswidget.ui  spellcheckercoresettings.cpp  spellcheckercoresettings.h  spellcheckerplugin.cpp  spellcheckerplugin.h  spellcheckquickfix.cpp  spellcheckquickfix.h  spellingmistakesmodel.cpp  spellingmistakesmodel.h  src.pri  suggestionsdialog.cpp  suggestionsdialog.h  suggestionsdialog.ui
src/Parsers/CppParser/: CppParser.pri  cppdocumentparser.cpp  cppdocumentparser.h  cppdocumentprocessor.cpp  cppdocumentprocessor.h  cppparserconstants.h  cppparseroptionspage.cpp  cppparseroptionspage.h  cppparseroptionswidget.cpp  cppparseroptionswidget.h  cppparseroptionswidget.ui  cppparsersettings.cpp  cppparsersettings.h
src/SpellCheckers/HunspellChecker/: HunspellChecker.pri  HunspellConstants.h  hunspellchecker.cpp  hunspellchecker.h  hunspelloptionswidget.cpp  hunspelloptionswidget.h  hunspelloptionswidget.ui
